<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp"

    tools:context=".Flower">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:contentDescription="@string/flower_image"
        android:gravity="center" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:gravity="fill_horizontal"
        android:textAlignment="textStart"
        android:textSize="16sp"/>

    <RadioGroup
        android:id="@+id/radioGroupSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Small" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium" />

        <RadioButton
            android:id="@+id/radioLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large" />

    </RadioGroup>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price: "
        android:textSize="18sp"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="42dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:layout_gravity="center"
    android:text="@string/Buy_Now"
    android:textSize="18sp"
    android:backgroundTint="#E49595"
    android:gravity="center"
    android:foreground="?attr/selectableItemBackground" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/Explore_other_Options"
        android:textSize="17sp"
        android:backgroundTint="#E49595"
        android:foreground="?attr/selectableItemBackground" />

</LinearLayout>
</ScrollView>